# translator

./: Cargo.toml  README.md  Wikipe-tan_manga_page1.json
src/: lib.rs
