[package]
name = "translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
base64 = "0.22.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["test-util", "rt-multi-thread", "macros"] }
